[package]
name = "jusix"
version = "0.1.6"
edition = "2021"
description = "An SWC plugin that enables embedded JSX reactivity and $() shortcut function for UIX"
license = "MIT"
repository = "https://github.com/unyt-org/jusix.git"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_atoms = "=0.6.7"
swc_ecma_parser = "0.149.0"
swc_ecma_visit = { version = "=0.103.3" }
swc_ecma_ast = { version = "=0.117.4", features = ["serde-impl"] }
swc_common = "=0.36.2"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
