[package]
name = "jusix"
version = "0.1.12"
edition = "2021"
description = "An SWC plugin that enables embedded JSX reactivity and $() shortcut function for UIX"
license = "MIT"
repository = "https://github.com/unyt-org/jusix.git"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.100.*", features = ["ecma_plugin_transform"] }
swc_ecma_parser = "0.149.0"
# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
